--- a/docs/small-devices.css
+++ b/docs/small-devices.css
@@ -53,3 +53,12 @@ main {
 .project-entry-header {
     margin-top: 20px;
 }
+
+.contact-fixed {
+    flex-direction: column;
+}
+
+.contact-fixed .logo-svg {
+    width: 44px;
+    height: 44px;
+}
